--- a/.github/workflows/cypress-pipeline.yml
+++ b/.github/workflows/cypress-pipeline.yml
@@ -19,6 +19,10 @@ jobs:
       - name: Checkout/Clone do projeto
         uses: actions/checkout@v3 
 
+      #exemplo de execução no terminal
+      - name: Instalar dependencias do projeto
+        run: npm install
+
       # execução e config do projeto
       - name: Run testes
         uses: cypress-io/github-action@v5
